# cen-interview-backend

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  langgraph.json  pyproject.toml
.chroma/evidence/: chroma.sqlite3
.github/workflows/: ci.yml  deploy.yml
migrations/: env.py  script.py.mako
migrations/versions/: 20260716_01_question_patterns.py  20260716_02_pattern_variants.py  20260717_03_github_verified_emails.py
nginx/: default.conf
scripts/: chroma_inspect.py  create_evidence_source_links.py
scripts/question_dataset/: create_dataset_manifest.py  embed_question_patterns.py  ingest_interview_question_patterns.py
src/interview/: __init__.py  config.py
src/interview/api/: __init__.py  create_tables.py  (+2 more)
tests/: conftest.py  test_agents_stub.py  test_api.py  test_report.py  test_schemas.py
tests/test_api/: test_github_oauth.py  test_sessions.py
tests/test_assessment/: UnitTest_stage7_4.py  UnitTest_stage7_5.py  Unittest_stage6.py  test_answer.py  test_flow.py  test_placeholder.py  test_report_builder.py  test_rubric_evaluation.py  test_rubric_novelty.py  test_stage1.py  test_stage3.py  test_stage4.py  test_stage5.py  test_stage6.py  test_stage7_1.py  test_state2.py
tests/test_evidence/: test_api_contract.py  test_chunking.py  test_code_chunking.py  test_extract.py  test_indexing.py  test_placeholder.py  test_sources.py  test_store.py  test_store_dedup.py
tests/test_interviewer/: test_adapters.py  test_graph_flow.py  test_graph_skeleton.py  test_routing.py  test_rubric_consent_flow.py  test_scenario_e2e.py  test_turn_stall.py  test_utterance.py
tests/test_question_dataset/: test_cluster_question_patterns.py  test_dataset_manifest.py  test_embed_question_candidates.py  test_pattern_pipeline.py  test_prepare_cluster_pattern_batch.py  test_question_pattern_dataset.py  test_question_pattern_ingestion.py  test_search_evaluation.py
tests/test_strategy/: test_difficulty.py  test_golden_scenarios.py  test_graph.py  test_pattern_style.py  test_placeholder.py  test_prefetch.py
(+112 files in other folders)
