[project]
name = "interview-agent"
version = "0.1.0"
description = "AI 기술 면접 에이전트 (Notion/GitHub 근거 기반)"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "langchain>=0.3",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "pydantic[email]>=2.9",
    "pydantic-settings>=2.6",
    "python-dotenv>=1.0",
    "langchain-openai>=1.3.3",
    # Vector DB: 처음엔 chromadb로 간단히 시작. 운영 단계에서 교체 가능.
    "chromadb>=0.5",
    "sqlalchemy>=2.0.51",
    "alembic>=1.18.5",
    "pgvector>=0.4.2",
    "psycopg[binary]>=3.3.4",
    "passlib>=1.7.4",
    "bcrypt==4.0.1",
    "python-jose[cryptography]>=3.5.0",
    "column>=0.4.3",
    "openai>=2.44.0",
    "interrupt>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/interview"]

[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py311"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
